fixed card overflow bug

--- a/style.css
+++ b/style.css
@@ -205,16 +205,28 @@ a {
 .projects .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 30px;
+  grid-auto-rows: 250px;
+  gap: 2rem;
+  padding-bottom: 2rem;
 }
 .projects .card {
   border-left: 10px solid var(--heading-color);
   display: flex;
   flex-direction: column;
+  gap: 5px;
   background-color: var(--bg-color);
   padding: 2rem;
   border-radius: 0.5rem;
   box-shadow: var(--shadow);
+}
+.projects .card-title {
+  font-size: 1.2rem;
+}
+.projects .card-text {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .actions {
   margin-top: auto;
